package com.lelib.designpattern.behavior.state.workflow;

public class CancelledState extends AbstractWorkflowState {
}
