package com.lelib.designpattern.behavior.state.workflow;

public class CompletedState extends AbstractWorkflowState {
}
